Feature: Status of the checkbox and cart summary is only updated when callback is received from the server. While client is waiting for callback spinning icon is shown. If error message is received, then error icon is shown. Cart summary is only updated on successful ajax calls.

--- a/sites/all/modules/custom/photo_search/photo_search.css
+++ b/sites/all/modules/custom/photo_search/photo_search.css
@@ -24,8 +24,10 @@
 	display: block;
 	cursor: pointer;
 	text-shadow: 0 -1px 0 rgba(0, 0, 0, .2);
-	width: 28px;
-	height: 28px;
+	width: 22px;
+	height: 22px;
+	padding-top:3px;
+	padding-left:3px;
 	/* position */
 	float: right;
 	position: relative;
@@ -375,4 +377,16 @@ form#select-event-runner-get-photos {
 
 .page-search-result #photo-request-submit-button .form-submit {
 	float: right;
+}
+
+.ajax-pending {
+	background: url(images/ajax-loader.gif);
+	height:16px;
+	width:16px;
+}
+
+.ajax-error {
+	background: url(images/ajax-error.gif);
+	height:16px;
+	width:16px;
 }
