Removed unused code + style fix.

--- a/sites/all/modules/custom/photo_search/photo_search.css
+++ b/sites/all/modules/custom/photo_search/photo_search.css
@@ -390,3 +390,7 @@ form#select-event-runner-get-photos {
 	height:16px;
 	width:16px;
 }
+
+.page-search-result .prev_img_details .form-submit {
+	background-color: #FFF;
+	}
