Added border to preview image on search results page.

--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -1549,8 +1549,7 @@ a#guide:hover {
 	/*float: left;*/
 	text-align: right;
 	width: 400px;
-	/*height:365px;*/
-	vertical-align: middle;
+	border: 1px solid #000;
 }
 
 .chzn-container .chzn-results li {
