--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -2880,3 +2880,8 @@ label.option {
 	font-weight: normal;
 	text-align: left;
 }
+
+/* Facebook Social Plugins */
+.fb-like {
+	margin-bottom: 15px;
+}
