--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -2928,10 +2928,13 @@ label.option {
 .form-textarea-wrapper textarea:focus {
 	color: black;
 }
-.node-page { 
+.node-type-page .node { 
 	padding:0;
-	}
+}
 
 .page-node .region-sidebar-second {
 	margin-top:-35px;
 	}
+.node-type-page .region-content {
+	clear:left;
+	} 
