--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -2932,7 +2932,7 @@ label.option {
 	padding:0;
 }
 
-.page-node .region-sidebar-second {
+.node-type-page .region-sidebar-second {
 	margin-top:-35px;
 	}
 .node-type-page .region-content {
