--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -2896,12 +2896,6 @@ label.option {
 	padding: 10px 30px;
 }
 
-.webform-client-form #edit-actions { 
-	float:none;
-	width:100%;
-	height:60px;
-}
-
 .webform-client-form .form-actions {
 	float: none;
 	width: 100%;
@@ -2935,6 +2929,24 @@ label.option {
 	border: none;
 	
 }
+
+.container-popup-date.container-inline-date {
+ 	clear:none;
+}
+
+.container-popup-date > .form-item {
+	margin-top: 1em;
+}
+
+.container-popup-date .date-padding {
+ 	margin: 0;
+ 	padding: 0;
+}
+
+.container-popup-date .date-padding .description, .container-popup-date .date-padding label {
+	display:none;
+}
+
 .form-textarea-wrapper textarea {
 	border: 1px solid #DEE4E7;
 	background-color: #FFC;
