--- a/sites/all/themes/runmemo/styles.css
+++ b/sites/all/themes/runmemo/styles.css
@@ -860,11 +860,11 @@ html.js fieldset.collapsed {
   padding-bottom: .6em;
 }
 
-html.js fieldset.collapsible .fieldset-legend {
+.collapsible .fieldset-legend {
   padding-left: 2em; /* LTR */
   background: url(images/menu-expanded.gif) no-repeat 0% 50%; /* LTR */
 }
-html.js fieldset.collapsed .fieldset-legend {
+.collapsed .fieldset-legend {
   background: url(images/menu-collapsed.gif) no-repeat 0% 50%; /* LTR */
 }
 
