#306 Take max and min price for photo on Upload and Product pages from Event. - Added max and min price fields to event - Added price data from events to Drupal.settings - Changed the upload form, so max and min prices are changed once event is changed - Added function with default max, min prices for each currency -

--- a/sites/all/modules/custom/photo_upload/photo_upload.css
+++ b/sites/all/modules/custom/photo_upload/photo_upload.css
@@ -37,7 +37,7 @@ margin-top:20px;
 display:block;
         }
         
-.page-photographer #event_drop {
+.page-photographer-upload .form-item-events-select {
    float:left;
 }
 
@@ -277,15 +277,6 @@ line-height:20px;
  	width:100%;
   float:left;
  }
-
-
-
-
-.page-photographer #event_drop {
-   padding:0 0 16px 0;
-   float:left;
-   height:63px;
-}
 
 .page-photographer #edit-box {
 
